# sniffy

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  PHASE_10_COMPLETE.md  PLAN.md  README.md
benches/: sniffy_benchmarks.rs
src/: classifier.rs  cli.rs  error.rs  git.rs  language.rs  lib.rs  main.rs  output.rs  processor.rs  stats.rs  walker.rs
tests/: integration_tests.rs
tests/fixtures/: README.md
tests/fixtures/edge_cases/: comments.js  generated.go  long_multiline.rs  mixed.rs  nested_comments.c  nested_rust.rs  only_code.rs  only_comments.rs
tests/fixtures/multi_lang/: app.js  lib.rs  util.py
tests/fixtures/simple/: main.rs  script.py
