[package]
name = "sniffy"
version = "0.1.0"
edition = "2021"
authors = ["Sniffy Contributors"]
description = "A fast command-line utility for analyzing source code statistics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sniffy"
keywords = ["cli", "code-analysis", "statistics", "loc", "git"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sniffy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
comfy-table = "7"
ignore = "0.4"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
